syntax="proto3";
package pb;
import "taskModels.proto";
option go_package = "/internal/service;service";

import "google/api/annotations.proto";

message TaskRequest{
    uint32 TaskID=1;
    uint32 UserID=2;
    uint32 Status=3;
    string Title=4;
    string Content=5;
    uint32 StartTime=6;
    uint32 EndTime=7;
}


message TasksDetailResponse{
  uint32 Code=1;
  repeated TaskModel TaskDetail=2;
  string UserName=3;
  string NickName=4;
}

message CommonResponse{
    uint32 Code=1;
    string Msg=2;
    string Data=3;
}

service TaskService{
  rpc TaskCreate(TaskRequest) returns(CommonResponse) {
    option (google.api.http) = {
      post:"/api/v1/task/create",
      body:"*",
    };
  };
  rpc TaskUpdate(TaskRequest) returns(CommonResponse) {
    option (google.api.http) = {
      put:"/api/v1/task/update",
      body:"*",
    };
  };
  rpc TaskShow(TaskRequest) returns(TasksDetailResponse) {
    option (google.api.http) = {
      get:"/api/v1/task/show",
    };
  };
  rpc TaskDelete(TaskRequest) returns(CommonResponse) {
    option (google.api.http) = {
      delete:"/api/v1/task/delete",
      body:"*",
    };
  };
}
